<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_10dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_contacts" />


    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_100" />

        <TextView
            android:id="@+id/tv_sp_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_24sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5dp"
            android:background="@color/teal_100" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llTitle"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/_10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_rounded_white_tv"
            android:hint="@string/name"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:padding="@dimen/dp_8"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_rounded_white_tv"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:padding="@dimen/dp_8"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_rounded_white_tv"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_8"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_rounded_white_tv"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_8"
            android:textAlignment="textStart" />


        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_rounded_primary_dark_tv"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
