<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary_color"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="false">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_above="@+id/llContent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:transitionName="app_icon"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_contacts" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@color/teal_100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/teal_100" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_rounded_white_tv"
                android:drawableStart="@drawable/ic_account_box"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_rounded_white_tv"
                android:drawableStart="@drawable/ic_password_key"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/_5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_rounded_primary_dark_tv"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:text="@string/no_account_yet_create_one"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>
</RelativeLayout>
